<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    style="@style/RegisterTheme" >
    <TextView
        android:id="@+id/attendr_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/attendr_label"
        android:textColor="#ff5500"
        android:textSize="50sp" />
    <TextView
        android:id="@+id/register_attendr_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/register_attendr_label"
        android:textColor="#ffffff"
        android:textSize="15sp" />
    <Button
        android:id="@+id/register_normal_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/register_normal_label"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="#009900"
        android:onClick="onRegisterClick"></Button>
    <Button
        android:id="@+id/facebook_connect_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/facebook_button_label"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="#3b5998"
        android:onClick="onFacebookClick"></Button>
    <Button
        android:id="@+id/twitter_connect_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/twitter_button_label"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="#4099ff"
        android:onClick="onTwitterClick"></Button>
</LinearLayout>