<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:layout_marginBottom="120dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="50dp"
    android:background="#dddddd"
    android:minHeight="200dp"
    android:minWidth="350dp"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/lbl_your_name" 
        android:text="@string/compose_title" 
        android:textSize="15sp"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" />
      
    <EditText
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:minLines="4"
        android:gravity="top|left"
        android:background="@drawable/feed_item_border"
        android:hint="@string/post_hint"
        android:imeOptions="actionSend"
        android:inputType="textCapSentences|textMultiLine"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" />

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/cancel_post"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cancel_label" />

        <Button
            android:id="@+id/share_post"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/share_label" />

    </LinearLayout>
</LinearLayout>